2007-11-24  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Make sure method is not NULL, defaulting to DES.
	Thanks to Dan Kopecek <dkopecek@redhat.com>.


2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: Move the srandom call to gensalt.
	* libmisc/salt.c (gensalt): Replace the test on salt_size by an
	assert.

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	Patch contributed by Dan Kopecek <dkopecek@redhat.com>
	* src/chpasswd.c, src/chgpasswd.c, src/newusers.c: Fix compilation
	when ENCRYPTMETHOD_SELECT is not defined.
	* libmisc/salt.c (MAGNUM): The nul char was put on (array)[2]
	instead of (array)[3].
	* libmisc/salt.c: MAGNUM should be defined even if
	ENCRYPTMETHOD_SELECT is not defined.
	* libmisc/salt.c: Use random instead of rand.
	* libmisc/salt.c (gensalt): New function to generate a salt
	(instead of using gettimeofday).

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c: New options -c/--crypt-method
	-s/--sha-rounds.

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Added crypt method: NONE.
	* src/chpasswd.c: Added --sha-rounds to the usage().
	* libmisc/Makefile.am, libmisc/getlong.c, src/chgpasswd.c,
	src/chpasswd.c, lib/prototypes.h: New getlong function. Replace
	chpasswd's and chgpasswd's getnumber.

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Removed unused variable 'member'.

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Document the variables used by chpasswd.
	The definitions are copied from login.defs. I should try to use a
	less error prone process for this.

2007-11-23  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: Use <replaceable> for the values set by
	users. (was sometimes <emphasis remap='I'>)
	* man/login.defs.5.xml: Use <option> vor the variable names. This